--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <div class="intro-left">
-        <div class="container-fluid">
-            <div class="row">
+        <div class="container-fluid full-height">
+            <div class="row text-center align-items-center full-height">
                 <div class="col">
                     <img src="/img/avatar.jpg" alt="User avatar" class="avatar">
+                    <p class="display-6">Dawid Wojciechowski</p>
+                    <p>Forecasts & Bootstrap Development</p>
                 </div>
             </div>
         </div>
