before contact form

--- a/index.html
+++ b/index.html
@@ -23,7 +23,103 @@
    <div class="container-fluid">
        <div class="row">
            <div class="col-md-4">Left</div>
-           <div class="col-md-8 panel-right">Right</div>
+
+           <div class="col-md-8 panel-right">
+            <section class="quote">
+                <figure>
+                    <blockquote class="blockquote">
+                      <p>God is in the details.</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">
+                      Mies van der Rohe <cite title="Source Title">1960</cite>
+                    </figcaption>
+                  </figure>
+            </section>
+
+            
+            <section class="intro">
+                <h1 class="display-4">Beautiful & Neat Portfolio Page.</h1>
+                <h2 class="display-6 mb-5">Build with Bootstrap 5</h2>
+                <p>
+                    The longer I live...
+                </p>
+            </section>
+
+            <section class="projects">
+                <h2 class="display-6">My projects:</h2>
+                <div class="container-fluid">
+                    <div class="row gy-5">
+                        <div class="col-md-6"><img src="./img/g1.jpg" alt="Portfolio image" class="img-fluid thumbnail"></div>
+                        <div class="col-md-6"><img src="./img/g2.jpg" alt="Portfolio image" class="img-fluid thumbnail"></div>
+                        <div class="col-md-6"><img src="./img/g3.jpg" alt="Portfolio image" class="img-fluid thumbnail"></div>
+                        <div class="col-md-6"><img src="./img/g4.jpg" alt="Portfolio image" class="img-fluid thumbnail"></div>
+                        <div class="col-md-6"><img src="./img/g5.jpg" alt="Portfolio image" class="img-fluid thumbnail"></div>
+                        <div class="col-md-6"><img src="./img/g6.jpg" alt="Portfolio image" class="img-fluid thumbnail"></div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="blog">
+                <h2 class="display-6 mb-5">My blog:</h2>
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <div class="card">
+                        <img src="img/b1.jpg" class="card-img-top" alt="..." />
+                        <div class="card-body">
+                          <h5 class="card-title">Which tools I use for design</h5>
+                          <p class="card-text">
+                            Lorem ipsum dolor sit amet...
+                          </p>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary float-right"
+                          >
+                            Read more...
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="card">
+                        <img src="img/b2.jpg" class="card-img-top" alt="..." />
+                        <div class="card-body">
+                          <h5 class="card-title">Why light design matters?</h5>
+                          <p class="card-text">
+                            Lorem ipsum dolor sit amet...
+                          </p>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary float-right"
+                          >
+                            Read more...
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="card">
+                        <img src="img/b3.jpg" class="card-img-top" alt="..." />
+                        <div class="card-body">
+                          <h5 class="card-title">TOP 10 design ideas in 2021</h5>
+                          <p class="card-text">
+                            Lorem ipsum dolor sit amet...
+                          </p>
+                          <button
+                            type="button"
+                            class="btn btn-outline-secondary float-right"
+                          >
+                            Read more...
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="float-right mt-3 px-3">Read more ></a>
+              </section>
+
+           </div>
        </div>
    </div> 
 </body>
